# gnam-api

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: constants.rs  gnam.rs  main.rs  s3mod.rs  utils.rs
