[package]
name = "gnam-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-multipart = "0.6.0"
env_logger = "0.10.0"
log = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
dns-lookup = "2.0.2"
url = "2.4.0"